--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "aws-common-runtime/aws-crt-cpp"]
 	path = crt/aws-crt-cpp
-	url = https://github.com/awslabs/aws-crt-cpp.git
+	url = https://github.com/eherozhao/aws-crt-cpp.git
+	branch = feature/presignedurl
